Implement getAllProducts endpoint.
